# feature_importance

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/examples/: example-majority-vote.logs
examples/: example_feature_imp_classification_user_data.py  example_majority_vote.py  generate_synthetic_data.py
notebooks/: maj-vote-feature-imp-tutorial.ipynb
src/: feature_importance.py  utils.py
tests/src/: test_placeholder.py
